# app_riverridge_food_waste_collection_analysis

./: pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/dashboards/: main.py
src/dashboards/pages/: Analysis.py
src/dashboards/utils/: __init__.py  generate_map.py
