[tool.kedro]
package_name = "pipelines"
project_name = "app_riverridge_food_waste_collection_analysis"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "app_riverridge_food_waste_collection_analysis"
version = "0.1.0"
description = ""
authors = ["ejwillemse <ejwillemse@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "^0.18.4"
streamlit = "^1.19.0"
awswrangler = "^2.18.0"
keplergl = "^0.3.2"
black = "^22.12.0"
toml = "^0.10.2"
geopy = "^2.3.0"
fsspec = "2022.11.0"
s3fs = "2022.11.0"
plotly = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"